# pyamplicol

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  THIRD_PARTY_NOTICES.md  flake.nix  justfile  pyproject.toml  rust-toolchain.toml
.github/workflows/: candidate.yml  eager-portability.yml  publish-pypi.yml  release-artifacts.yml  tests.yml
build_backend/: _pyamplicol_build.py  distribution_sbom.py  package_version.py  prepared_models.py  python_lock.py  sdk.py
config/: release-dependencies.toml
dependencies/: README.md  contributor-lock.toml  install_dependencies.py  python-runtime-lock.toml  release-lock.toml
docs/: README.md  pyAmpliCol.tex  result_matrix_builtin_sm_full_table.tex  result_matrix_builtin_sm_lc_table.tex  result_matrix_builtin_sm_nlc_table.tex  result_matrix_external_sm_eager_full_table.tex  result_matrix_external_sm_eager_lc_table.tex  result_matrix_external_sm_eager_nlc_table.tex  result_matrix_external_sm_full_table.tex  result_matrix_external_sm_lc_table.tex  result_matrix_external_sm_nlc_table.tex  result_scalar_contact_table.tex  result_scalar_gravity_table.tex  result_tables.py  result_z_builtin_sm_table.tex  result_z_external_sm_table.tex  section_eager_execution.tex  section_lc_flow_layouts.tex  section_ufo_support.tex  section_zgg_dag.tex  section_zgg_example.tex
docs/development/: API_CONTRACT.md  ARCHITECTURE_DECISIONS.md  COMPILED_DAG_DIRECT_ARENA_FEASIBILITY.md  COMPILED_DAG_OPTIMIZATION_LEDGER.md  CONFIG_CONTRACT.md  LEGAL_RELEASE_STATUS.md  MILESTONES.md  MODEL_ASSET_PROVENANCE.md  PACKAGING_CONTRACT.md  PHYSICS_EXTRACTION_CONTRACT.md  PORT_MANIFEST.toml  RECURRENCE_ALL_FLOW_RUNTIME_HELICITY_AUDIT.md  RECURRENCE_AMPLICOL_ARCHITECTURE_AUDIT.md  RECURRENCE_AMPLICOL_ARCHITECTURE_AUDIT_FOLLOWUP.md  RECURRENCE_AMPLICOL_ARCHITECTURE_AUDIT_VALIDATION.md  RECURRENCE_AMPLICOL_EXECUTION_AUDIT.md  RECURRENCE_AMPLICOL_RUNTIME_CHECKPOINT_AUDIT.md  RECURRENCE_AMPLICOL_SEMANTIC_CHECKPOINT_AUDIT.md  RECURRENCE_COLOR_WITNESS_AUDIT.md  RECURRENCE_CONSTRUCTOR_AUDIT.md  RECURRENCE_DIRECT_ARENA_ABI.md  RECURRENCE_DIRECT_ARENA_MCCLINTOCK_VALIDATION.md  RECURRENCE_DIRECT_ARENA_RUNTIME_AUDIT.md  RECURRENCE_EXECUTION_ABI.md  RECURRENCE_FIRST_SCHEDULE_REVIEW.md  RECURRENCE_LC_PORT_WIRING_AUDIT.md  RECURRENCE_NATIVE_RUNTIME_PRE_CANARY_AUDIT.md  RECURRENCE_POST_CHECKPOINT_ARCHITECTURE_AUDIT.md  RECURRENCE_RUNTIME_ALLOCATION_AUDIT.md  RECURRENCE_THREE_LINE_AMPLICOL_ORACLE.md  RECURRENCE_TOPOLOGY_HELICITY_SUM_CHECKPOINT.md  SCHEMA_VERSIONS.toml  SOURCE_BASELINE.toml  SYMJIT_ARM64_DIRECT_ARENA_SCALAR_STATUS_MRE.md
docs/results/: scalar_contact.json  (+13 more)
examples/: README.md  all_options.toml  benchmark.toml  benchmark_z6g_all_flows_single_helicity.toml  benchmark_z6g_generation_specialized_all_flows_single_helicity.toml  benchmark_z6g_generation_specialized_flow_helicity_sum.toml  benchmark_z6g_single_flow_helicity_sum.toml  builtin_sm_eager.toml  builtin_sm_full.toml  builtin_sm_lc.toml  builtin_sm_nlc.toml  evaluate_resolved.toml  evaluate_total.toml  external_json_scalar_gravity.toml  external_json_scalars.toml  external_json_sm.toml  external_ufo_sm.toml  generate_pp_zjj_from_ufo_sm.toml  process_set_mixed_multiplicity.toml
licenses/: GammaLoop-model-assets.txt  GammaLoop.txt  MadGraph5_aMCatNLO.txt  RUST_THIRD_PARTY.toml  STATIC_LINK_COMPLIANCE.toml  Symbolica.txt  ufo-model-loader.txt
rust/crates/rusticol-capi/: Cargo.toml  build.rs
rust/crates/rusticol-capi/fortran/: rusticol.f90
rust/crates/rusticol-capi/include/: rusticol.h  rusticol.hpp
rust/crates/rusticol-capi/src/: lib.rs
rust/crates/rusticol-capi/tests/: eager_artifact.rs  runtime_selectors.rs
rust/crates/rusticol-core/: Cargo.toml
rust/crates/rusticol-core/src/: artifact.rs  artifact_tests.rs  eager_layout.rs  eager_layout_tests.rs  eager_lowering_v3.rs  eager_lowering_v3_tests.rs  eager_plan_v3_pacbin.rs  eager_plan_v3_pacbin_tests.rs  eager_runtime.rs  eager_tables.rs  engine.rs  engine_tests.rs  error.rs  evaluator.rs  lib.rs  metadata.rs  metadata_tests.rs  pacbin.rs  pacbin_tests.rs  wavefunctions.rs
rust/crates/rusticol-core/src/eager_runtime/: execute.rs  plan.rs  plan_v3.rs  plan_v3_tests.rs  profile.rs  runtime.rs
rust/crates/rusticol-core/src/engine/: artifact_load.rs  contraction_metadata_tests.rs  eager_backend.rs  eager_integration_tests.rs  eager_lane.rs  eager_load.rs  eager_manifest.rs  eager_v3_common.rs  eager_v3_decode.rs  eager_v3_load.rs  eager_v3_manifest.rs  eager_v3_manifest_tests.rs  evaluation.rs  helicity_lane.rs  model_parameters.rs  momentum.rs  native_runtime.rs  physics.rs  point_selectors.rs  quantum_number_flow_tests.rs  recurrence_backend.rs  recurrence_integration_tests.rs  recurrence_lane.rs  recurrence_load.rs  recurrence_manifest.rs  runtime_load.rs  source_metadata_tests.rs  sources.rs  validation.rs
rust/crates/rusticol-core/src/evaluator/: amplitude.rs  backend.rs  compiled.rs  crossing.rs  recurrence_closure_direct.rs  recurrence_source_direct.rs  stage.rs  symjit.rs  symjit_direct.rs
rust/crates/rusticol-core/src/recurrence/: arena.rs  builder.rs  color.rs  construct.rs  direct_backend.rs  direct_backend_tests.rs  direct_codec.rs  direct_codec_tests.rs  direct_lowering.rs  direct_lowering_tests.rs  direct_pacbin.rs  direct_pacbin_tests.rs  direct_plan.rs  direct_plan_tests.rs  direct_runtime.rs  direct_runtime_tests.rs  exact.rs  input.rs  layout.rs  mod.rs  process.rs  program.rs  runtime.rs  template.rs  tests.rs
rust/crates/rusticol-core/tests/: eager_runtime.rs  recurrence_direct_arena_allocations.rs
rust/crates/rusticol-python/: Cargo.toml  build.rs
rust/crates/rusticol-python/src/: eager_lowering.rs  lib.rs  recurrence.rs  recurrence_template.rs
rust/crates/rusticol-python/stubs/pyamplicol/: __init__.pyi  _rusticol.pyi
rust/crates/rusticol-python/tests/: pyrightconfig.json  stub_contract.rs  typing_consumer.py
schemas/: README.md  artifact-manifest-v3.schema.json  reference-fixture-bundle-v1.schema.json  reference-oracle-evidence-v2.schema.json  reference-physics-v2.schema.json  runtime-physics-v1.schema.json
(+512 files in other folders)
