# SPDX-License-Identifier: 0BSD

[workspace]
members = [
  "rust/crates/rusticol-core",
  "rust/crates/rusticol-python",
  "rust/crates/rusticol-capi",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
license = "0BSD"
authors = [
  "Rikkert Frederix <rikkert.frederix@thep.lu.se>",
  "Valentin Hirschi <valentin.hirschi@gmail.com>",
  "Timea Vitos <timea.vitos@thep.lu.se>",
]
repository = "https://github.com/mg5amcnlo/pyamplicol"

[workspace.dependencies]
bincode = { version = "2.0", features = ["serde"] }
libc = "0.2"
numpy = "0.28"
pyo3 = { version = "0.28", features = ["abi3-py311"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["float_roundtrip", "raw_value"] }
sha2 = "0.10"
symbolica = { version = "=2.1.0", default-features = true, features = ["bincode"] }
thiserror = "2.0"
wide = "1.3"

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = 3
panic = "unwind"
strip = "debuginfo"
